# fiddlecube-sdk

./: .gitignore  Pipfile  README.md  fiddlecube.py  main.py  pyproject.toml  redteam.py  requirements.txt  setup.py  soothsayer.py  synthetic_data.csv
app/: application.py
data/: csic_ecml_1000.csv  csic_ecml_sample.csv
fiddlecube/: fiddlecube.py
soothsayer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
