[tool.poetry]
name = "fiddlecube-synthesis"
version = "0.1.0"
description = "Generate synthetic data from seed datasets."
authors = ["Kaushik Srinivasan <kaushik@fiddlecube.ai>"]
readme = "README.md"
packages = [{ include = "fiddlecube_synthesis" }]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
sdv = "^1.2.0"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
