[tool.poetry]
name = "fiddlecube"
version = "0.1.0"
description = "Generate synthetic data from seed datasets."
authors = ["Kaushik Srinivasan <kaushik@fiddlecube.ai>"]
readme = "README.md"
packages = [{ include = "fiddlecube" }]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
